...
                android:src="@drawable/guest_default_image">
            </ImageView>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_profile_button"
            style="inter"
            android:layout_width="120dp"
            android:layout_height="44dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="25dp"
            android:layout_toEndOf="@+id/profile_pic_card"
            android:layout_toStartOf="@+id/create_event_button"
            android:background="@drawable/button_outline_white"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/edit_profile_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
...
            android:layout_marginTop="63dp"
            android:layout_marginEnd="13dp"
            android:background="@color/white" />


        <TextView
            android:id="@+id/homepage_name_text"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
...
