...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BrowseActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/browse_tabs"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
...
            android:text="@string/events_text"
            android:background="@color/blue">
        </com.google.android.material.tabs.TabItem>
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/browse_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/browse_tabs"
        android:layout_above="@id/navigation_bar">
    </androidx.viewpager2.widget.ViewPager2>

...
