...
    tools:context=".QRScannerActivity">

    <ImageView
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:background="@drawable/robot_image"
        app:layout_constraintBottom_toTopOf="@+id/QR_scan_code_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894">
    </ImageView>

...
